# mesh-llm

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Justfile  MIC_LAB_NOTES.md  MIC_LAB_REPORT.md  MIC_LAB_TODO.md  Package.swift  README.md  RELEASE.md  ROADMAP.md  SKIPPY_PROTOCOL_TODO.md  SPD_SKIPPY_PROJECT.md  deny.toml  install-runtime.sh  install.md  install.ps1  install.sh  next-goal.md  package-lock.json
crates/llama-quant-ffi/: Cargo.toml  build.rs
crates/llama-quant-ffi/src/: lib.rs
crates/mesh-client/: Cargo.toml  README.md
crates/mesh-client/src/: lib.rs
crates/mesh-client/src/client/: builder.rs  control_plane.rs  mod.rs
crates/mesh-client/src/models/: catalog.json
crates/mesh-client/src/network/: nostr.rs
crates/mesh-client/tests/: control_plane_client.rs  reconnect_manual.rs
crates/mesh-llm/: Cargo.toml  README.md  TODO.md
crates/mesh-llm-api/: Cargo.toml  README.md
crates/mesh-llm-api-client/: Cargo.toml
crates/mesh-llm-api-server/: Cargo.toml  README.md
crates/mesh-llm-api-server/src/: lib.rs  node.rs
crates/mesh-llm-api-server/tests/: host_node_gated_relay.rs  openai_proxy.rs
crates/mesh-llm-api/src/: client.rs  discover.rs  lib.rs  node.rs
crates/mesh-llm-api/tests/: public_api.rs
crates/mesh-llm-build-info/: Cargo.toml  README.md  build.rs
crates/mesh-llm-build-info/src/: lib.rs
crates/mesh-llm-cli/: Cargo.toml
crates/mesh-llm-cli/src/: benchmark.rs  lib.rs  models.rs  parser.rs  runtime.rs
crates/mesh-llm-cli/src/parser/: runtime_surface_help.rs  setup_tests.rs  uninstall_tests.rs
crates/mesh-llm-commands/: Cargo.toml
crates/mesh-llm-commands/src/: benchmark.rs  config.rs  gpus.rs  lib.rs  model_package.rs  plugin.rs  runtime_native.rs  terminal.rs  uninstall.rs  update.rs
crates/mesh-llm-commands/src/gpus/: tune_apply.rs  tune_hardware.rs  tune_resolver.rs  tune_runner.rs  tune_runner_tests.rs
crates/mesh-llm-commands/src/runtime_native/: formatters.rs  setup_helpers.rs
crates/mesh-llm-commands/src/setup/: actions.rs  cli_actions_tests.rs  command.rs  command_tests.rs  environment.rs  github.rs  github_runner.rs  github_tests.rs  mod.rs  orchestration_tests.rs  plan.rs  planner.rs  prompt.rs  service.rs  service_files.rs  service_paths.rs  service_runner.rs  service_templates.rs  service_tests.rs  summary.rs  test_support.rs  tests.rs
crates/mesh-llm-config/: Cargo.toml  README.md
crates/mesh-llm-config/src/: authoring.rs  diagnostic.rs  lib.rs  model.rs  plugin_validation.rs  validate.rs  validate_gpu_tune_tests.rs
crates/mesh-llm-config/src/model/: built_in_schema.rs  schema_types.rs
crates/mesh-llm-config/src/validate_schema_contract/: runtime_controls.rs
crates/mesh-llm-console-server/: Cargo.toml
crates/mesh-llm-console-server/src/: lib.rs
crates/mesh-llm-embedded-runtime/: Cargo.toml
crates/mesh-llm-events/: Cargo.toml
crates/mesh-llm-events/src/: lib.rs  terminal_progress.rs
crates/mesh-llm-ffi/: Cargo.toml  README.md
crates/mesh-llm-ffi/src/: lib.rs  mesh_ffi.udl
crates/mesh-llm-ffi/tests/: client_exports_compile.rs  error_mapping.rs  live_sdk_smoke.rs  smoke.rs
crates/mesh-llm-gpu-bench/: Cargo.toml  README.md  build.rs
crates/mesh-llm-gpu-bench/native/cuda/: membench-fingerprint.cu
crates/mesh-llm-gpu-bench/native/ggml/: decode-probe.cpp
crates/mesh-llm-gpu-bench/native/hip/: membench-fingerprint.hip
crates/mesh-llm-gpu-bench/native/metal/: membench_metal.m
crates/mesh-llm-gpu-bench/src/: ggml_probe.rs  lib.rs  output.rs  runner.rs
crates/mesh-llm-hardware-profile/: Cargo.toml
crates/mesh-llm-hardware-profile/src/: lib.rs
crates/mesh-llm-host-runtime/: Cargo.toml  README.md
crates/mesh-llm-host-runtime/src/: command_support.rs  config_schema.rs  host_node.rs  lib.rs  sdk.rs
crates/mesh-llm-host-runtime/src/api/: access.rs  mod.rs  model_targets.rs  server.rs  split_readiness.rs  state.rs  status.rs  tests.rs
crates/mesh-llm-host-runtime/src/cli/: benchmark.rs  mod.rs  models.rs  terminal_progress.rs
crates/mesh-llm-host-runtime/src/inference/: mlx.rs  mod.rs
crates/mesh-llm-host-runtime/src/mesh/: artifact_transfer_io.rs  connections.rs  direct_path.rs  gossip.rs  heartbeat.rs  identity_persistence.rs  lan_bootstrap.rs  mod.rs  (+14 more)
crates/mesh-llm-identity/: Cargo.toml
crates/mesh-llm-mlx-runtime/: Cargo.toml  README.md
crates/mesh-llm-mlx-runtime/src/: backend.rs  client.rs  config.rs  download.rs  lib.rs  parallelism.rs  process.rs  transport.rs
crates/mesh-llm-node/: Cargo.toml  README.md
crates/mesh-llm-node/src/: lib.rs  models.rs  serving.rs
crates/mesh-llm-nodejs/: Cargo.toml
crates/mesh-llm-nodejs/src/: lib.rs
crates/mesh-llm-plugin/: Cargo.toml  README.md  build.rs
crates/mesh-llm-plugin-manager/: Cargo.toml  README.md
crates/mesh-llm-plugin-manager/src/: archive.rs  asset.rs  catalog.rs  github.rs  install.rs  lib.rs  skills.rs  source_ref.rs  store.rs  target.rs
crates/mesh-llm-plugin/proto/: plugin.proto
crates/mesh-llm-plugin/src/: context.rs  dsl.rs  helpers.rs  io.rs  lib.rs  manifest.rs  runtime.rs
crates/mesh-llm-runtime-install/: Cargo.toml
crates/mesh-llm-runtime-install/src/: lib.rs
crates/mesh-llm-sdk/: Cargo.toml  README.md
crates/mesh-llm-sdk/src/: lib.rs
crates/mesh-llm-skills/: Cargo.toml
crates/mesh-llm-skills/src/: lib.rs
crates/mesh-llm-system/: Cargo.toml
crates/mesh-llm-system/src/: autoupdate.rs  backend.rs  benchmark.rs  embedded_release_footer.rs  lib.rs  release_target.rs  util.rs  vram.rs
crates/mesh-llm-tui/: Cargo.toml
crates/mesh-llm-tui/src/: lib.rs  terminal_progress.rs
crates/mesh-llm/src/: lib.rs
crates/mesh-llm/tests/: cli_errors.rs  owned_node_commands_cli.rs  virtual_llm_injection.rs
crates/mesh-mixture-of-agents/: Cargo.toml
crates/mesh-mixture-of-agents/src/: backend.rs  context.rs  fanout.rs  lib.rs  normalize.rs  reducer.rs  session.rs  worker.rs
crates/mesh-mixture-of-agents/tests/: sim_all_workers_fail.rs  sim_enable_thinking_propagation.rs  sim_tool_call_text_not_passed_as_content.rs  sim_tool_result_routes_to_reducer.rs  sim_worker_accounting.rs
(+1203 files in other folders)
