[workspace]
members = [
    "crates/mesh-llm",
    "crates/mesh-llm-cli",
    "crates/mesh-llm-commands",
    "crates/mesh-llm-config",
    "crates/mesh-llm-events",
    "crates/mesh-llm-build-info",
    "crates/mesh-llm-gpu-bench",
    "crates/mesh-llm-host-runtime",
    "crates/mesh-llm-hardware-profile",
    "crates/mesh-llm-identity",
    "crates/mesh-llm-native-runtime",
    "crates/mesh-llm-protocol",
    "crates/mesh-llm-routing",
    "crates/mesh-llm-runtime-install",
    "crates/mesh-llm-sdk",
    "crates/mesh-llm-guardrails",
    "crates/mesh-llm-system",
    "crates/mesh-llm-tui",
    "crates/mesh-llm-types",
    "crates/mesh-llm-console-server",
    "crates/mesh-llm-embedded-runtime",
    "crates/mesh-llm-ui",
    "crates/mesh-llm-plugin",
    "crates/mesh-llm-skills",
    "crates/mesh-llm-plugin-manager",
    "crates/mesh-client",
    "crates/mesh-llm-api-client",
    "crates/mesh-llm-api-server",
    "crates/mesh-llm-node",
    "crates/mesh-llm-ffi",
    "crates/mesh-llm-nodejs",
    "crates/mesh-llm-test-harness",
    "crates/model-ref",
    "crates/model-artifact",
    "crates/model-hf",
    "crates/model-resolver",
    "crates/skippy-protocol",
    "crates/skippy-coordinator",
    "crates/skippy-topology",
    "crates/skippy-cache",
    "crates/skippy-metrics",
    "crates/openai-frontend",
    "crates/skippy-ffi",
    "crates/skippy-runtime",
    "crates/skippy-server",
    "crates/metrics-server",
    "crates/skippy-model-package",
    "crates/skippy-quantize",
    "crates/model-package",
    "crates/skippy-correctness",
    "crates/llama-spec-bench",
    "crates/skippy-bench",
    "crates/skippy-prompt",
    "crates/mesh-mixture-of-agents",
    "crates/llama-quant-ffi",
    "tools/xtask",
]
default-members = [
    "crates/mesh-llm",
    "crates/mesh-llm-plugin",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
version = "0.68.0"

[workspace.dependencies]
anyhow = "1"
blake3 = "1"
clap = { version = "4", features = ["derive"] }
mesh-llm-build-info = { path = "crates/mesh-llm-build-info", version = "0.68.0" }
mesh-llm-skills = { path = "crates/mesh-llm-skills", version = "0.68.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[patch.crates-io]
hf-hub = { git = "https://github.com/Mesh-LLM/hf-hub", branch = "mesh-llm" }

[workspace.lints.clippy]
cognitive_complexity = "warn"
too_many_lines = "warn"

# Do not remove this section: direct GGUF debug startup spends most of its time
# hashing the source model via sha2/sha2-asm before native skippy model open,
# so keep those crates near release speed in dev builds.
[profile.dev.package.sha2]
opt-level = 3

[profile.dev.package.sha2-asm]
opt-level = 3

# Tightened release profile for shipped binaries.
#
# - `lto = "thin"`: parallel link-time optimization across the crate graph.
#   Roughly 80% of fat-LTO's binary-size and perf benefit at ~30% of the
#   link cost. Fat LTO would shave a few more MB but pushes release link
#   from ~30 s to several minutes on this codebase.
# - `codegen-units = 1`: pairs with thin LTO so the optimizer can inline
#   across the whole crate without re-link boundaries. Trades parallelism
#   in codegen for output quality; cargo still parallelises the dep graph.
# - `strip = "debuginfo"`: drops DWARF from the Mach-O / ELF output. We
#   keep function symbols so backtraces from production nodes remain
#   readable (`nm`, `addr2line` on the symbol table still works). DWARF
#   on macOS arm64 alone is several MB of dead weight in the binary.
# - panic stays at the default ("unwind"). Plugin / MCP error recovery
#   relies on unwinding; the AGENTS.md notes explicitly forbid switching
#   to `abort`.
[profile.release]
lto = "thin"
codegen-units = 1
strip = "debuginfo"
