[package]
name = "llama-quant-ffi"
edition.workspace = true
license.workspace = true
version.workspace = true
build = "build.rs"
description = "Small Rust FFI surface for llama.cpp GGUF quantization"
repository = "https://github.com/Mesh-LLM/mesh-llm"
homepage = "https://github.com/Mesh-LLM/mesh-llm"

[features]
default = []
dynamic-runtime = ["dep:libloading"]

[dependencies]
libloading = { version = "0.8", optional = true }
