[package]
name = "mesh-llm-api-client"
version.workspace = true
edition = "2024"
description = "Client-only Rust SDK API for Mesh LLM applications"
license = "Apache-2.0"
repository = "https://github.com/Mesh-LLM/mesh-llm"
homepage = "https://github.com/Mesh-LLM/mesh-llm"
readme = "README.md"
keywords = ["llm", "mesh", "sdk", "client"]
categories = ["api-bindings", "network-programming"]

[features]
host-io = ["mesh-client/host-io"]

[dependencies]
mesh-client = { package = "mesh-llm-client", version = "0.72.1", path = "../mesh-client" }
hex = "0.4"
thiserror = "2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
