[package]
name = "mesh-llm-api-server"
version.workspace = true
edition = "2024"
description = "Public Rust SDK for embedding Mesh LLM nodes in applications"
license = "Apache-2.0"
repository = "https://github.com/Mesh-LLM/mesh-llm"
homepage = "https://github.com/Mesh-LLM/mesh-llm"
readme = "README.md"
keywords = ["llm", "mesh", "sdk", "api", "node"]
categories = ["api-bindings", "network-programming"]

[features]
host-io = ["mesh-llm-api-client/host-io"]

[dependencies]
anyhow.workspace = true
mesh-llm-api-client = { path = "../mesh-llm-api-client", version = "0.72.1" }
mesh-llm-node = { path = "../mesh-llm-node", version = "0.72.1" }
tokio = { version = "1", features = ["sync"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
