[package]
name = "mesh-llm-api"
version = "0.65.1"
edition = "2021"
description = "Public Rust SDK for embedding Mesh LLM nodes in applications"
license = "Apache-2.0"
repository = "https://github.com/Mesh-LLM/mesh-llm"
homepage = "https://github.com/Mesh-LLM/mesh-llm"
readme = "README.md"
keywords = ["llm", "mesh", "sdk", "api", "node"]
categories = ["api-bindings", "network-programming"]

[features]
host-io = ["mesh-client/host-io"]

[dependencies]
anyhow.workspace = true
mesh-client = { package = "mesh-llm-client", version = "0.65.1", path = "../mesh-client" }
mesh-llm-node = { path = "../mesh-llm-node" }
hex = "0.4"
thiserror = "2"
tokio = { version = "1", features = ["sync"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
