[package]
name = "mesh-llm-embedded-runtime"
edition.workspace = true
license.workspace = true
version.workspace = true
description = "In-process full Mesh LLM node embedding API"
repository = "https://github.com/Mesh-LLM/mesh-llm"
homepage = "https://github.com/Mesh-LLM/mesh-llm"
readme = "README.md"
keywords = ["llm", "mesh", "runtime", "embedding"]
categories = ["api-bindings", "network-programming"]

[features]
default = []
web-ui = ["mesh-llm-host-runtime/web-ui"]
dynamic-native-runtime = ["mesh-llm-host-runtime/dynamic-native-runtime"]

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
mesh-llm-host-runtime = { path = "../mesh-llm-host-runtime", version = "0.72.1", default-features = false }
serde_json.workspace = true
