[package]
name = "mesh-llm-ffi"
version = "0.1.0"
edition = "2021"

[lib]
name = "meshllm_ffi"
crate-type = ["cdylib", "staticlib", "rlib"]

[features]
default = []
host = ["mesh-llm-node"]

[dependencies]
mesh-llm-api = { path = "../mesh-llm-api" }
mesh-llm-node = { path = "../mesh-llm-node", optional = true }
uniffi = "=0.31.0"
thiserror = "2"
pollster = "0.3"

[build-dependencies]
uniffi = { version = "=0.31.0", features = ["build"] }

[dev-dependencies]
mesh-llm-api = { path = "../mesh-llm-api" }
