[package]
name = "mesh-llm-ffi"
version.workspace = true
edition = "2021"

[lib]
name = "meshllm_ffi"
crate-type = ["cdylib", "staticlib", "rlib"]

[features]
default = []
host = ["mesh-llm-node"]
embedded-runtime = ["mesh-llm-host-runtime"]

[dependencies]
mesh-llm-api-server = { version = "0.66.0", path = "../mesh-llm-api-server" }
mesh-llm-host-runtime = { version = "0.66.0", path = "../mesh-llm-host-runtime", default-features = false, optional = true }
mesh-llm-node = { version = "0.66.0", path = "../mesh-llm-node", optional = true }
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread"] }
uniffi = "=0.31.0"

[build-dependencies]
uniffi = { version = "=0.31.0", features = ["build"] }

[dev-dependencies]
mesh-llm-api-server = { version = "0.66.0", path = "../mesh-llm-api-server" }
