[package]
name = "mesh-llm-gpu-bench"
version.workspace = true
edition = "2024"
license.workspace = true
description = "GPU benchmark primitives used by mesh-llm hardware profiling"
repository = "https://github.com/Mesh-LLM/mesh-llm"
homepage = "https://github.com/Mesh-LLM/mesh-llm"
build = "build.rs"

[dependencies]
anyhow = "1"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"

[build-dependencies]
cc = "1"

[features]
cuda = []
hip = []
intel = []
ggml-probe = []
