[package]
name = "mesh-llm-host-runtime"
version.workspace = true
edition = "2021"

[features]
default = ["web-ui"]
# Embed the React web console into the binary. Default on; turn off for
# lib-style / headless consumers that don't need the console assets.
# Propagates to `mesh-llm-ui/embed-assets`.
web-ui = ["mesh-llm-ui/embed-assets"]
gpu-bench-cuda = ["mesh-llm-system/gpu-bench-cuda"]
gpu-bench-hip = ["mesh-llm-system/gpu-bench-hip"]
gpu-bench-intel = ["mesh-llm-system/gpu-bench-intel"]

[lints]
workspace = true

[dependencies]
ansi-to-tui = "8"
mesh-mixture-of-agents = { version = "0.1.0", path = "../mesh-mixture-of-agents" }
mesh-llm-plugin = { version = "0.66.0", path = "../mesh-llm-plugin" }
mesh-llm-identity = { version = "0.66.0", path = "../mesh-llm-identity" }
mesh-llm-guardrails = { version = "0.66.0", path = "../mesh-llm-guardrails" }
mesh-llm-protocol = { version = "0.66.0", path = "../mesh-llm-protocol" }
mesh-llm-routing = { version = "0.66.0", path = "../mesh-llm-routing" }
mesh-llm-system = { version = "0.66.0", path = "../mesh-llm-system", features = ["skippy-devices"] }
mesh-llm-types = { version = "0.66.0", path = "../mesh-llm-types" }
mesh-llm-ui = { version = "0.66.0", path = "../mesh-llm-ui", default-features = false }
mesh-llm-node = { version = "0.66.0", path = "../mesh-llm-node" }
mesh-llm-api-server = { version = "0.66.0", path = "../mesh-llm-api-server" }
mesh-client = { package = "mesh-llm-client", version = "0.66.0", path = "../mesh-client", features = ["host-io"] }
model-artifact = { version = "0.66.0", path = "../model-artifact" }
model-package = { version = "0.66.0", path = "../model-package" }
model-ref = { version = "0.66.0", path = "../model-ref" }
model-resolver = { version = "0.66.0", path = "../model-resolver" }
openai-frontend = { version = "0.66.0", path = "../openai-frontend" }
skippy-protocol = { version = "0.66.0", path = "../skippy-protocol" }
skippy-coordinator = { version = "0.66.0", path = "../skippy-coordinator" }
skippy-runtime = { version = "0.66.0", path = "../skippy-runtime" }
skippy-server = { version = "0.66.0", path = "../skippy-server" }
skippy-topology = { version = "0.66.0", path = "../skippy-topology" }
iroh = "1.0.0-rc.0"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
async-trait = "0.1"
arboard = "3"
rand = "0.10"
base64 = "0.22"
biip = "0.9.2"
dirs = "6.0.0"
hex = "0.4.3"
nostr-sdk = { version = "0.44.1", default-features = false }
opentelemetry = { version = "0.31.0", default-features = false, features = ["metrics"] }
opentelemetry_sdk = { version = "0.31.0", default-features = false, features = ["metrics"] }
opentelemetry-otlp = { version = "0.31.0", default-features = false, features = ["metrics", "http-proto", "reqwest-blocking-client"] }
rustls = "0.23.36"
reqwest = { version = "0.12", features = ["stream", "json"] }
semver = "1"
sha2 = "0.10"
ed25519-dalek = { version = "=3.0.0-pre.7", features = ["rand_core"] }
crypto_box = "0.9"
chacha20poly1305 = "0.10"
argon2 = "0.5"
thiserror = "2"
zeroize = { version = "1", features = ["derive"] }
rpassword = "5"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service", "crypto-rust", "vendored"] }
chrono = { version = "0.4", features = ["serde"] }
httparse = "1"
tokio-stream = "0.1"
crossterm = "0.28"
ratatui = "0.30"
url = "2"
urlencoding = "2"
libc = "0.2.183"
mdns-sd = "0.19"
regex-lite = "0.1"
rmcp = { version = "1.2", features = ["client", "server", "transport-child-process", "transport-io", "transport-streamable-http-client-reqwest", "transport-streamable-http-server"] }
schemars = "1"
prost = "0.14"
toml = "0.9"
zip = { version = "2", default-features = false, features = ["deflate"] }
hf_hub = { package = "hf-hub", version = "1.0.0-rc.1", default-features = false, features = ["blocking"] }
tabwriter = "1"

[dev-dependencies]
axum = "0.8"
serial_test = "3"
mesh-client = { package = "mesh-llm-client", version = "0.66.0", path = "../mesh-client" }
tempfile = "3"
