[package]
name = "mesh-llm-host-runtime"
version.workspace = true
edition = "2024"

[features]
default = ["web-ui"]
# Embed the React web console into the binary. Default on; turn off for
# lib-style / headless consumers that don't need the console assets.
# Propagates to `mesh-llm-ui/embed-assets`.
web-ui = ["mesh-llm-ui/embed-assets"]
gpu-bench-cuda = ["mesh-llm-system/gpu-bench-cuda"]
gpu-bench-hip = ["mesh-llm-system/gpu-bench-hip"]
gpu-bench-intel = ["mesh-llm-system/gpu-bench-intel"]

[lints]
workspace = true

[dependencies]
ansi-to-tui = "8"
mesh-mixture-of-agents = { path = "../mesh-mixture-of-agents" }
mesh-llm-config = { path = "../mesh-llm-config" }
mesh-llm-plugin = { path = "../mesh-llm-plugin" }
mesh-llm-identity = { path = "../mesh-llm-identity" }
mesh-llm-guardrails = { path = "../mesh-llm-guardrails" }
mesh-llm-protocol = { path = "../mesh-llm-protocol" }
mesh-llm-routing = { path = "../mesh-llm-routing" }
mesh-llm-system = { path = "../mesh-llm-system", features = ["skippy-devices"] }
mesh-llm-types = { path = "../mesh-llm-types" }
mesh-llm-ui = { path = "../mesh-llm-ui", default-features = false }
mesh-llm-node = { path = "../mesh-llm-node" }
mesh-llm-api-server = { path = "../mesh-llm-api-server" }
mesh-client = { package = "mesh-llm-client", path = "../mesh-client", features = ["host-io"] }
model-artifact = { path = "../model-artifact" }
model-package = { path = "../model-package" }
model-ref = { path = "../model-ref" }
model-resolver = { path = "../model-resolver" }
openai-frontend = { path = "../openai-frontend" }
skippy-protocol = { path = "../skippy-protocol" }
skippy-coordinator = { path = "../skippy-coordinator" }
skippy-runtime = { path = "../skippy-runtime" }
skippy-server = { path = "../skippy-server" }
skippy-topology = { path = "../skippy-topology" }
iroh = "1.0.0-rc.0"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
async-trait = "0.1"
arboard = "3"
rand = "0.10"
base64 = "0.22"
dirs = "6.0.0"
hex = "0.4.3"
json5 = "1.3.1"
nostr-sdk = { version = "0.44.1", default-features = false }
opentelemetry = { version = "0.31.0", default-features = false, features = ["metrics"] }
opentelemetry_sdk = { version = "0.31.0", default-features = false, features = ["metrics"] }
opentelemetry-otlp = { version = "0.31.0", default-features = false, features = ["metrics", "http-proto", "reqwest-blocking-client"] }
rustls = "0.23.36"
reqwest = { version = "0.12", features = ["stream", "json"] }
semver = "1"
sha2 = "0.10"
ed25519-dalek = { version = "=3.0.0-pre.7", features = ["rand_core"] }
crypto_box = "0.9"
chacha20poly1305 = "0.10"
argon2 = "0.5"
thiserror = "2"
zeroize = { version = "1", features = ["derive"] }
rpassword = "5"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service", "crypto-rust", "vendored"] }
chrono = { version = "0.4", features = ["serde"] }
httparse = "1"
tokio-stream = "0.1"
crossterm = "0.28"
ratatui = "0.30"
url = "2"
urlencoding = "2"
libc = "0.2.183"
mdns-sd = "0.19"
regex-lite = "0.1"
rmcp = { version = "1.2", features = ["client", "server", "transport-child-process", "transport-io", "transport-streamable-http-client-reqwest", "transport-streamable-http-server"] }
schemars = "1"
prost = "0.14"
toml = "0.9"
zip = { version = "2", default-features = false, features = ["deflate"] }
hf_hub = { package = "hf-hub", version = "1.0.0-rc.1", default-features = false, features = ["blocking"] }
tabwriter = "1"

[dev-dependencies]
axum = "0.8"
serial_test = "3"
mesh-client = { package = "mesh-llm-client", path = "../mesh-client" }
tempfile = "3"
# Used by the gated-relay regression test to spawn an in-process iroh-relay
# with AccessConfig::Restricted, then build a real iroh::Endpoint from our
# relay_map_from_urls output and verify --relay-auth tokens reach the relay
# on the WebSocket upgrade (and that the wrong token is rejected).
iroh = { version = "1.0.0-rc.0", features = ["test-utils"] }
iroh-relay = { version = "1.0.0-rc.0", features = ["server", "test-utils"] }
futures-util = "0.3"
