[package]
name = "mesh-llm-host-runtime"
version.workspace = true
edition = "2024"
license.workspace = true
description = "Host runtime orchestration for mesh-llm nodes"
repository = "https://github.com/Mesh-LLM/mesh-llm"
homepage = "https://github.com/Mesh-LLM/mesh-llm"
readme = "README.md"

[features]
default = ["web-ui"]
# Embed the React web console into the binary. Default on; turn off for
# lib-style / headless consumers that don't need the console assets.
# Propagates to `mesh-llm-ui/embed-assets`.
web-ui = ["mesh-llm-ui/embed-assets"]
gpu-bench-cuda = ["mesh-llm-system/gpu-bench-cuda"]
gpu-bench-hip = ["mesh-llm-system/gpu-bench-hip"]
gpu-bench-intel = ["mesh-llm-system/gpu-bench-intel"]
dynamic-native-runtime = [
    "mesh-llm-system/dynamic-native-runtime",
    "skippy-runtime/dynamic-native-runtime",
    "skippy-server/dynamic-native-runtime",
]

[lints]
workspace = true

[dependencies]
bytes = "1"
mesh-llm-build-info.workspace = true
mesh-mixture-of-agents = { path = "../mesh-mixture-of-agents", version = "0.72.1"  }
mesh-llm-config = { path = "../mesh-llm-config", version = "0.72.1"  }
mesh-llm-events = { path = "../mesh-llm-events", version = "0.72.1"  }
mesh-llm-plugin = { path = "../mesh-llm-plugin", version = "0.72.1"  }
mesh-llm-plugin-manager = { path = "../mesh-llm-plugin-manager", version = "0.72.1"  }
mesh-llm-identity = { path = "../mesh-llm-identity", version = "0.72.1", features = ["host-io"]  }
mesh-llm-native-runtime = { path = "../mesh-llm-native-runtime", version = "0.72.1"  }
mesh-llm-runtime-install = { path = "../mesh-llm-runtime-install", version = "0.72.1"  }
mesh-llm-guardrails = { path = "../mesh-llm-guardrails", version = "0.72.1"  }
mesh-llm-protocol = { path = "../mesh-llm-protocol", version = "0.72.1"  }
mesh-llm-routing = { path = "../mesh-llm-routing", version = "0.72.1"  }
mesh-llm-system = { path = "../mesh-llm-system", version = "0.72.1", features = ["skippy-devices"]  }
mesh-llm-types = { path = "../mesh-llm-types", version = "0.72.1"  }
mesh-llm-ui = { path = "../mesh-llm-ui", version = "0.72.1", default-features = false  }
mesh-llm-node = { path = "../mesh-llm-node", version = "0.72.1"  }
mesh-llm-api-server = { path = "../mesh-llm-api-server", version = "0.72.1"  }
mesh-client = { package = "mesh-llm-client", path = "../mesh-client", version = "0.72.1", features = ["host-io"]  }
model-artifact = { path = "../model-artifact", version = "0.72.1"  }
model-hf = { path = "../model-hf", version = "0.72.1"  }
model-package = { path = "../model-package", version = "0.72.1"  }
model-ref = { path = "../model-ref", version = "0.72.1"  }
model-resolver = { path = "../model-resolver", version = "0.72.1"  }
openai-frontend = { path = "../openai-frontend", version = "0.72.1"  }
skippy-protocol = { path = "../skippy-protocol", version = "0.72.1"  }
skippy-coordinator = { path = "../skippy-coordinator", version = "0.72.1"  }
skippy-runtime = { path = "../skippy-runtime", version = "0.72.1"  }
skippy-server = { path = "../skippy-server", version = "0.72.1"  }
skippy-topology = { path = "../skippy-topology", version = "0.72.1"  }
iroh = "1.0.0"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
socket2 = { version = "0.6", features = ["all"] }
if-addrs = "0.15"
anyhow = "1"
async-trait = "0.1"
rand = "0.10"
base64 = "0.22"
dirs = "6.0.0"
hex = "0.4.3"
json5 = "1.3.1"
nostr-sdk = { version = "0.44.1", default-features = false }
opentelemetry = { version = "0.31.0", default-features = false, features = ["metrics"] }
opentelemetry_sdk = { version = "0.31.0", default-features = false, features = ["metrics"] }
opentelemetry-otlp = { version = "0.31.0", default-features = false, features = ["metrics", "http-proto", "reqwest-blocking-client"] }
rustls = "0.23.36"
reqwest = { version = "0.12", features = ["stream", "json"] }
flate2 = "1"
futures-util = "0.3"
semver = "1"
sha2 = "0.10"
tar = "0.4"
ed25519-dalek = { version = "=3.0.0-rc.0", features = ["rand_core"] }
crypto_box = "0.9"
chacha20poly1305 = "0.10"
argon2 = "0.5"
thiserror = "2"
zeroize = { version = "1", features = ["derive"] }
rpassword = "5"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service", "crypto-rust", "vendored"] }
chrono = { version = "0.4", features = ["serde"] }
httparse = "1"
http = "1"
http-body-util = "0.1"
tokio-stream = "0.1"
crossterm = "0.28"
url = "2"
urlencoding = "2"
libc = "0.2.183"
mdns-sd = "0.19"
regex-lite = "0.1"
rmcp = { version = "1.2", features = ["client", "server", "transport-child-process", "transport-io", "transport-streamable-http-client-reqwest", "transport-streamable-http-server"] }
axum = "0.8"
schemars = "1"
prost = "0.14"
toml = "0.9"
zip = { version = "2", default-features = false, features = ["deflate"] }
hf_hub = { package = "hf-hub", version = "1.0.0-rc.1", default-features = false, features = ["blocking"] }
tabwriter = "1"
tempfile = "3"

[dev-dependencies]
serial_test = "3"
mesh-client = { package = "mesh-llm-client", path = "../mesh-client", version = "0.72.1"  }
# Used by the gated-relay regression test to spawn an in-process iroh-relay
# with AccessConfig::Restricted, then build a real iroh::Endpoint from our
# relay_map_from_urls output and verify --relay-auth tokens reach the relay
# on the WebSocket upgrade (and that the wrong token is rejected).
iroh = { version = "1.0.0", features = ["test-utils"] }
iroh-relay = { version = "1.0.0", features = ["server", "test-utils"] }
