[package]
name = "mesh-llm-mlx-runtime"
edition.workspace = true
license.workspace = true
version.workspace = true
description = "Mesh LLM backend that orchestrates an MLX (Apple Silicon) sidecar for distributed inference"
repository = "https://github.com/Mesh-LLM/mesh-llm"
homepage = "https://github.com/Mesh-LLM/mesh-llm"

[features]
default = []
# When enabled, integration tests may exercise a real `mlx_lm.server` process.
# Off by default so CI does not require an MLX install.
live-sidecar = []

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait = "0.1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "process", "net", "rt-multi-thread", "sync", "time", "io-util"] }
tracing = "0.1"
reqwest = { version = "0.12", features = ["stream", "json"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
