[package]
name = "mesh-llm-node"
version = "0.1.0"
edition = "2021"
description = "Embeddable Mesh LLM node primitives for model management and serving"

[features]
default = []
host = []

[dependencies]
anyhow.workspace = true
mesh-llm-types = { path = "../mesh-llm-types" }
model-artifact = { path = "../model-artifact" }
model-hf = { path = "../model-hf" }
model-ref = { path = "../model-ref" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
