[package]
name = "mesh-llm-nodejs"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Node.js native addon for the Mesh LLM SDK"
repository = "https://github.com/Mesh-LLM/mesh-llm"
homepage = "https://github.com/Mesh-LLM/mesh-llm"

[lib]
name = "mesh_llm_nodejs"
crate-type = ["cdylib"]

[features]
default = ["embedded-runtime"]
embedded-runtime = []

[dependencies]
mesh-llm-sdk = { path = "../mesh-llm-sdk", version = "0.72.1", default-features = false, features = ["client", "node", "console", "serving"] }
napi = { version = "2.16.17", features = ["napi4", "tokio_rt"] }
napi-derive = "2.16.13"
serde_json.workspace = true
tokio = { version = "1", features = ["rt-multi-thread"] }

[build-dependencies]
napi-build = "2.1.6"
