[package]
name = "mesh-llm-plugin-manager"
edition.workspace = true
license.workspace = true
version.workspace = true
description = "Plugin package management primitives for Mesh LLM"
repository = "https://github.com/Mesh-LLM/mesh-llm"
homepage = "https://github.com/Mesh-LLM/mesh-llm"
readme = "README.md"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile = "3"
