[package]
name = "mesh-llm-plugin-manager"
edition.workspace = true
license.workspace = true
version.workspace = true
description = "Plugin package management primitives for Mesh LLM"
repository = "https://github.com/Mesh-LLM/mesh-llm"
homepage = "https://github.com/Mesh-LLM/mesh-llm"
readme = "README.md"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
dirs = "6"
flate2 = "1"
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde.workspace = true
serde_json.workspace = true
tar = "0.4"
tempfile = "3"
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
