[package]
name = "mesh-llm-plugin"
version.workspace = true
edition = "2024"
license.workspace = true
description = "Plugin protocol and runtime primitives for mesh-llm"
repository = "https://github.com/Mesh-LLM/mesh-llm"
homepage = "https://github.com/Mesh-LLM/mesh-llm"

[lints]
workspace = true

[dependencies]
anyhow = "1"
async-trait = "0.1"
prost = "0.14"
rmcp = { version = "1.8", features = ["server"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
prost-build = "0.14"
protoc-bin-vendored = "3"
